namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: clo835-app
  labels:
    name: clo835-app
    project: clo835-final
