app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
  namespace: clo835-app
  labels:
    app: flask-app
    tier: frontend
spec:
  ports:
  - port: 80
    targetPort: 81
    protocol: TCP
  selector:
    app: flask-app
    tier: frontend
  type: ClusterIP
